Change Log : -Added add service logic -Added image in add service -Added correct image handling -Enhanced Styling -Added few enhancements to dashboard -Added delete/edit/view service routes -Added a google map dependant on location
Known Bugs :

-There is no search in topbar
-Messages are not working
-Reviews are not completed

--- a/WorkyProject/src/main/resources/static/css/style.css
+++ b/WorkyProject/src/main/resources/static/css/style.css
@@ -2601,6 +2601,7 @@ footer .powered p span {
     height: 120px;
     text-align: center;
     padding: 40px;
+    background-size: cover;
 }
 
 .add .photo ul li i {
